@@ -11,3 +11,9 @@ mupgrade-module-negative-type= (Negative)
 
 [modifier-description]
 mupgrade-default-effect-description=Machine
+
+[mod-setting-name]
+mupgrade-disable=Disable Machine Upgrades
+
+[mod-setting-description]
+mupgrade-disable=[color=255,125,0]WARNING[/color] Disabling Machine Upgrades causes all Machine Upgrade technology effects (eg Assemplers +10% Productivity) to no longer function. Only use this if:\n1) The game is crashing, and the crash log tells you to turn on this setting,\n2) You already reported the crash to the relevant mod developer, and are waiting for the fix,\n3) AND Machine Upgrades is a dependency of another mod.\nThis manual override is for emergencies only. Default Off.
