@@ -1,0 +1,8 @@
+data:extend({
+    {
+        type = "bool-setting",
+        name = "mupgrade-disable",
+        setting_type = "startup",
+        default_value = false
+    }
+})
